Closed Bug 92810 Opened 23 years ago Closed 23 years ago

JSHashTable shift inconsistent after RawAdd/Remove OOM error

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: brendan, Assigned: brendan)

Details

(Keywords: js1.5)

Attachments

(1 file)

Pointed out by Mikael Andersson <mikael.andersson@tidomat.se>, also exists in
nsprpub/lib/ds/plhash.c.  Patch coming up.

/be
Status: NEW → ASSIGNED
Keywords: js1.5, mozilla0.9.4
Priority: -- → P3
Target Milestone: --- → mozilla0.9.4
Attached patch proposed fixSplinter Review
Seeking r= and sr= from the cc: list.

/be
Ok, trying for review again.  I'll mail too, in case you guys all ignore bugmail.

/be
r/sr=waterson
r/sr=jband
Fix checked in.

/be
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
I checked in the fix in nsprpub/lib/ds/plhash.c (the tip)
as well.
Marking Verified - 
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: