Bugzilla bug #92810: increment or decrement the hashtable shift counter only after we have successfully allocated the new buckets.  The patch is from Brendan Eich.